--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ stages:
   - test
 
 variables:
-  SUITE_1_PATH: "testSuites/01-sign-in-successfull.xml"
+  SUITE_1_PATH: "testSuites/01-sign-in-successful.xml"
   # SUITE_2_PATH: "testSuites/09-Create_Preparation.xml"
   # Add more suites as needed
 
@@ -29,12 +29,15 @@ testSuites:
     # Add more suites using a comma-separated list
 
   after_script:
+    - mvn clean verify  # Assuming you want to clean and verify the project after tests
     - mvn dependency:purge-local-repository
 
   artifacts:
     paths:
-      - target/
-      # Add any other paths you want to persist as artifacts
+      - target/           # Assuming this is where your build artifacts are generated
+      - .m2/repository/   # Include Maven repository if needed
+    expire_in: 1 week     # Adjust as needed based on your retention requirements
 
   variables:
+    MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"  # Specify the Maven repository location
     MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
