Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,17 @@
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-- test
-sast:
+  - test
+
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+
+before_script:
+  - sudo apt-get update -qy
+  - sudo apt-get install -y maven
+
+test:
   stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  image: selenium/standalone-chrome:latest
+  script:
+    - mvn clean test -DsuiteXmlFile=testSuites/01-sign-in-successfull.xml
