--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>TestSailFramework</groupId>
-  <artifactId>TestSailFramework</artifactId>
+  <groupId>test_automation_framework</groupId>
+  <artifactId>test_automation_framework</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>SailFramework</name>
+  <name>test_automation_framework</name>
   <url>http://maven.apache.org</url>
   <!--
  <build> 
@@ -20,6 +20,7 @@
    <properties>
      <maven.compiler.source>8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
   
@@ -29,7 +30,9 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
+
+          <version>3.2.5</version>
+
            <configuration>
              <suiteXmlFiles>
                <suiteXmlFile>${testngTest}</suiteXmlFile>
@@ -62,7 +65,7 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.11.0</version>
+    <version>4.18.1</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
