--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,18 +15,18 @@
 
 #image: maven:3.8.4-openjdk-11-slim
 stages:
-  - ExternalReportSuite
+  - InternalReportSuite
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  testngTest: "testSuites/04-External_Reports.xml"
+  testngTest: "testSuites/05-Internal_Reoprts.xml"
 
 before_script:
   - sudo apt-get update -qy
   - sudo apt-get install -y maven
 
 ExternalReports:
-  stage: PreparationSuite
+  stage: InternalReportSuite
   image: selenium/standalone-chrome:latest
   script:
     #- mvn clean test -DsuiteXmlFile=testSuites/01-sign-in-successfull.xml
