--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@
 
 #image: maven:3.8.4-openjdk-11-slim
 stages:
-  - InternalReportSuite
+  - Test
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
@@ -26,7 +26,7 @@ before_script:
   - sudo apt-get install -y maven
 
 ExternalReports:
-  stage: InternalReportSuite
+  stage: Test
   image: selenium/standalone-chrome:latest
   script:
     #- mvn clean test -DsuiteXmlFile=testSuites/01-sign-in-successfull.xml
