--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,3 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
-
-#stages:
-#- test
-#sast:
- # stage: test
-#include:`
-#- template: Security/SAST.gitlab-ci.yml
-
-#image: maven:3.8.4-openjdk-11-slim
 stages:
   - Test
 
@@ -22,13 +6,13 @@ variables:
   testngTest: "testSuites/ExternalAuditTestSuites/1-sign-in-addNewRecordSire.xml"
 
 before_script:
-  - sudo apt-get update -qy
-  - sudo apt-get install -y maven
+  - apt-get update -qy
+  - apt-get install -y openjdk-11-jdk maven
+  - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+  - export PATH=$JAVA_HOME/bin:$PATH
 
 CreateSIREIRecord:
   stage: Test
   image: selenium/standalone-chrome:latest
   script:
-    #- mvn clean test -DsuiteXmlFile=testSuites/01-sign-in-successfull.xml
-    #- echo "TestNG Test Suite: ${testngTest}"
     - mvn clean test -DsuiteXmlFile=${testngTest}
