--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,18 +20,17 @@ stages:
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  testngTest: "testSuites/ExternalAuditTestSuites/1-sign-in-addNewRecordSire.xml"
+  testngTest: "testSuites/01-sign-in-successfull.xml"
 
-CreateSIREIRecord:
+before_script:
+  - sudo apt-get update -qy
+  - sudo apt-get install -y maven
+  #- sudo apt-get install -y xvfb
+
+SignIN:
   stage: Test
   image: selenium/standalone-chrome:latest
-  before_script:
-    - apt-get update -qy
-    - apt-get install -y openjdk-11-jdk maven
-    - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
-    - export PATH=$JAVA_HOME/bin:$PATH
-    - java -version    # Check Java version
-    - javac -version   # Check Javac version
-    - mvn -version     # Check Maven version
   script:
+    #- mvn clean test -DsuiteXmlFile=testSuites/01-sign-in-successfull.xml
+    #- echo "TestNG Test Suite: ${testngTest}"
     - mvn clean test -DsuiteXmlFile=${testngTest}
