--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
              <suiteXmlFiles>
                <suiteXmlFile>${testngTest}</suiteXmlFile>
             </suiteXmlFiles>
+             <forkCount>1</forkCount>  <!-- Ensures single JVM execution -->
+                <reuseForks>true</reuseForks>
          </configuration>
         </plugin>
         
@@ -76,12 +78,12 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-   <version>7.5</version>
-    <scope>compile</scope>
-</dependency>
+  <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.9.0</version> <!-- Ensure you're using a compatible version -->
+        <scope>compile</scope>
+    </dependency>
 
 <dependency>
     <groupId>org.apache.commons</groupId>
@@ -92,7 +94,7 @@
 <dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>4.0.9</version>
+    <version>5.1.1</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
@@ -139,16 +141,35 @@
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-api</artifactId>
-    <version>2.23.1</version>
+    <version>2.20.0</version>
 </dependency>
 
+
+
 <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+
+
+
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-core</artifactId>
-    <version>2.23.1</version>
+    <version>2.20.0</version>
 </dependency>
 
+
+ <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>2.0.17</version>
+   </dependency>
+     <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j2-impl</artifactId>
+        <version>2.21.1</version>
+    </dependency>
+
+
+ 
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
@@ -157,22 +178,21 @@
         <scope>compile</scope>
     </dependency>
     
-    <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-api</artifactId>
-       <version>2.0.16</version>
-   </dependency>
-   <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-log4j12</artifactId>
-       <version>2.0.16</version>
-   </dependency>
+   
+    
+    <!-- 
    
    <dependency>
     <groupId>ch.qos.logback</groupId>
     <artifactId>logback-classic</artifactId>
     <version>1.2.6</version>
+    
+    
+    
+    
 </dependency>
+
+ -->
    
  
 
